@@ -10,4 +10,3 @@ with-doctest=True
 with-coverage=True
 cover-package=beaker
 cover-inclusive=True
-with-doctest=True
